# rima

./: CMakeLists.txt  dist.info
cmake/: FindCOIN.cmake  Findlpsolve.cmake
